# misys-racing-stack

./: check_pipeline.py  csv_ploy.py  latency_result.csv  latency_result_with_other_process.csv  latency_test.py  mpcc_sim.rviz
.github/: copilot-instructions.md
.install_utils/: post_create_command.sh
2D_perception/: package.xml  setup.cfg  setup.py
2D_perception/launch/: perception_launch.xml
2D_perception_cpp/: CMakeLists.txt  package.xml
2D_perception_cpp/launch/: perception_launch.xml
2D_state_estimation/: package.xml  setup.cfg  setup.py
2D_state_estimation/launch/: ekf_launch.py  state_estimation_launch.xml
MPCC/C++/: .gitignore  Makefile
MPCC/C++/Cost/: cost.cpp  cost.h
controller/controller_manager/: CMakeLists.txt  package.xml
controller/controller_manager/config/: l1_controller.yaml  mux_controller.yaml
controller/controller_manager/include/: latency_compensator.hpp
controller/controller_manager/launch/: mpcc_launch.xml  mpcc_sim_launch.xml  mux_controller_f110_launch.xml  mux_controller_gym_launch.xml
controller/controller_manager/src/: l1_controller.cpp  mux_controller.cpp
controller/ftg/src/: ftg.cpp
controller/map/include/: map.hpp
controller/map/lut/: F1TENTH_Pacejka_lookup_table.csv
controller/map/src/: lookup_steer_angle.cpp  map.cpp
controller/mpcc/mpcc_json_tools/: package.xml  setup.cfg  setup.py
controller/mpcc/mpcc_json_tools/mpcc_json_tools/: mpcc_json_tools.py
controller/mpcc/mpcc_ros/: CMakeLists.txt  package.xml
controller/mpcc/mpcc_ros/config/: mpcc.yaml  mpcc_sim.yaml
controller/mpcc/mpcc_ros/msg/: Corridor.msg  MpccControl.msg  SHint.msg
controller/mpcc/mpcc_ros/src/: dummy_corridor_generator.cpp  mpcc_node.cpp  mpcc_node_sim.cpp
controller/mppi/: package.xml  readme.md  requirements.txt  setup.py
controller/mppi/config/: config.py  dynamics_config.py  model.py  models_param.yaml  mppi_params.yaml
controller/mppi/launch/: mppi_launch.xml
controller/mppi/mppi/: cost.py  delay_compensator.py  discretizers.py  mppi_node.py  planner.py  solver.py  track_sdf.py  utils.py
controller/mppi/orig/: controller_config.py  dynamics_config.py  mppi.py  mppi_solver.py
controller/pp/include/: pp.hpp
controller/pp/src/: pp.cpp
mpcc_ros/: CMakeLists.txt
particle_filter/config/: localize.yaml
particle_filter/maps/: real_hall.yaml  real_hall_margin11_obs.yaml
perception/: CMakeLists.txt  package.xml
perception/launch/: perception_launch.xml
perception/src/: tracking.cpp  tracking_ver1.cpp
planner/corridor_generator/: CMakeLists.txt  package.xml
planner/corridor_generator/include/: NodeGraph.hpp  corridor_generator.hpp  matplotlibcpp.h  offline_params.hpp
planner/corridor_generator/launch/: corridor_generator_launch.xml
planner/corridor_generator/src/: corridor_generator.cpp  corridor_generator_utils.cpp  offline_params.cpp  visualization.cpp
rosbag2_2026_02_08-13_09_25/: metadata.yaml
rosbag2_2026_02_08-13_18_30/: metadata.yaml
rosbag2_2026_02_08-13_53_30/: metadata.yaml
stack_master/config/: offline_params.yaml  offline_params_fix.yaml
stack_master/config/OrinNano/: l1_params.yaml
stack_master/config/SIM/: sim.rviz  sim_params.yaml
stack_master/config/global_planner/: global_planner_params.yaml
stack_master/launch/: base_system_3D_launch.xml  base_system_launch.xml  detection_simulation_launch.xml  head_to_head_3D_launch.xml  head_to_head_launch.xml  time_trials_launch.xml
stack_master/maps/hall/: ot_sectors.yaml
stack_master/maps/margin666/: ltpl_waypoints.json  margin666.yaml  ot_sectors.yaml  speed_scaling.yaml
stack_master/maps/margin6666/: ltpl_waypoints.json  margin6666.yaml  ot_sectors.yaml  speed_scaling.yaml
stack_master/maps/margin66666/: margin66666.yaml  ot_sectors.yaml  speed_scaling.yaml
stack_master/maps/margin77777/: ltpl_waypoints.json  margin77777.yaml  ot_sectors.yaml  speed_scaling.yaml
stack_master/maps/real_hall/: ltpl_waypoints.json  ot_sectors.yaml  real_hall.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin10/: ltpl_waypoints.json  ot_sectors.yaml  real_hall_margin10.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin11/: ot_sectors.yaml  real_hall_margin11.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin11_curv/: ltpl_waypoints.json  ot_sectors.yaml  real_hall_margin11_curv.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin11_down/: ot_sectors.yaml  real_hall_margin11_down.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin11_obs/: ltpl_waypoints.json  ot_sectors.yaml  real_hall_margin11_obs.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin12/: ltpl_waypoints.json  ot_sectors.yaml  real_hall_margin12.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin2/: ot_sectors.yaml  real_hall_margin2.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin2_speed_same/: ltpl_waypoints.json  speed_scaling.yaml
stack_master/maps/real_hall_margin3/: ltpl_waypoints.json  ot_sectors.yaml  real_hall_margin3.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin4/: ot_sectors.yaml  real_hall_margin4.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin5/: speed_scaling.yaml
stack_master/maps/real_hall_margin6/: ltpl_waypoints.json  real_hall_margin5.yaml  speed_scaling.yaml
stack_master/maps/real_hall_margin6_001/: speed_scaling.yaml
stack_master/maps/real_hall_margin6_002/: speed_scaling.yaml
stack_master/maps/teras/: global_waypoints.json  (+3 more)
system_identification/on_track_sys_id/nodes/on_track_sys_id/: CMakeLists.txt  package.xml  setup.cfg  setup.py
system_identification/on_track_sys_id/nodes/on_track_sys_id/launch/: sys_id.launch.py
system_identification/on_track_sys_id/nodes/on_track_sys_id/models/Orinnano/: Orinnano.txt  Orinnano_pacejka.txt
system_identification/on_track_sys_id/nodes/on_track_sys_id/on_track_sys_id/: load_model.py  on_track_sys_id.py  plot_results.py  save_model.py  simulate_model.py  solve_pacejka.py  train_model.py
system_identification/on_track_sys_id/nodes/on_track_sys_id/params/: nn_params.yaml  pacejka_params.yaml
(+124 files in other folders)
