<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception</name>
  <version>0.0.1</version>
  <description>Perception tracker (static/dynamic) using FrenetConverter C++</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- runtime/build dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>f110_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Frenet converter -->
  <depend>frenet_conversion_cpp</depend>

  <!-- Eigen 찾기용 모듈 (환경에 따라 불필요할 수 있음) -->
  <build_depend>eigen3_cmake_module</build_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
